[package]
name = "mmagolf"
version = "0.1.0"
edition = "2021"
description = "Submitting tool for MMA Golf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.10", features = ["derive"] }
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
base64 = "0.13.0"
atty = "0.2.14"
tokio = { version = "1.17.0", features = ["full"] }
tokio-tungstenite = "0.17.1"
url = "2.0.0"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
erase-output = { git = "https://github.com/nanikamado/erase-output" }
termion = "1.5.6"
