[package]
name = "mmagolf"
version = "0.1.0"
edition = "2021"
description = "Submitting tool for MMA Golf"
default-run = "mmagolf"

[[bin]]
name = "mmagolf"
path = "src/main.rs"

[[bin]]
name = "mmagolf-back"
path = "src/back.rs"

[features]
dry_run = []
localhost_server = []

[dependencies]
clap = { version = "3.1.10", features = ["derive"] }
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
base64 = "0.13.0"
atty = "0.2.14"
tokio = { version = "1.17.0", features = ["full"] }
tokio-tungstenite = "0.17.1"
url = "2.0.0"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
futures = "0.3.21"
erase-output = { git = "https://github.com/nanikamado/erase-output" }
termion = "1.5.6"
chrono = "0.4.19"
users = "0.11.0"
ssh2 = "0.9.3"
htmlescape = "0.3.1"
slack-hook = "0.8.0"
